changed connect pics to png and put them in an asside. Added image size styling to css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Richard Bates' Bio</title>
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	</head>
 	<body>
   <!--beginning of article-->
@@ -23,12 +24,17 @@
 		<!-- section about me-->
 		<section>
 			<h2>The Person Behind the Code</h2>
+			
 			<p> It's hard to grow up in north-western NJ and not loving to be outdoors, after all you can't get anywhere without a car or bicycle. While I can fairly say I certainly spent a good deal of time playing video games and tinkering on my computer it is nice to get away from it all every once and a while and explorer ones on backwoods til dusk falls. More recently I have taken a joy in  <a href="https://www.geocaching.org">Geocaching</a> and Scuba diving. Nothing beats the thrill of being underwater in near complete silence. I've always had a love of the water swimming, Kayaking, scuba diving. I should move to Florida...</p>
+			
+			<p> Should you have any questions for me or interested in my work please feel free to conact me via the contact form one of my profiles to the right.</p>
 		</section>
 	</article>
-	<h2>Connect With Me</h2>
-	<img src="assets/images/stack-overflow.jpg">
-	<img src="assets/images/linkedin.jpg">
-	<a href="https://github.com/Richwb"><img src="assets/images/github.jpg"></a>
+	<aside>
+	 	<h2>Connect With Me</h2>
+	 	<img src="assets/images/stack-overflow.png">
+		<img src="assets/images/linkedin.png">
+		<a href="https://github.com/Richwb"><img src="assets/images/github.png"></a>
+	</aside>
 </body>
 </html>
