floated text to wrap around image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		<hr>
 	
-		<img src="assets/images/bio-pic.jpg">
+		<img src="assets/images/bio-pic.jpg" alt="Me driving a dune buggy in Cancun">
 
 		<!--section about my coding history-->
 		<section>
