--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 	</head>
 	<body>
   	<header>
-			<div>Richard Bates</div>
-			<!--menu items-->
-			<nav>
-				<a href="index.html">About</a>
-				<a href="portfolio.html">Portfolio</a>
-				<a href="contact.html">Contact</a>
-			</nav>
+			<div class="headerContent">
+				<div class="name">Richard Bates</div>
+			<!--menu-->
+				<nav>
+					<a href="index.html">About</a>
+				  <a href="portfolio.html">Portfolio</a>
+				  <a href="contact.html">Contact</a>
+			  </nav>
+  	  </div>
   	</header>
   	<!--main content-->
   	<main>
