centered and padded connect with me

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 				<div class="name">Richard Bates</div>
 			<!--menu-->
 				<nav>
-					
-						<a href="index.html"><div class="nav-button">About</div></a>
-				  	<a href="portfolio.html"><div class="nav-button">Portfolio</div></a>
-				  	<a href="contact.html"><div class="nav-button">Contact</div></a>
-				  
+					<a href="index.html"><div class="nav-button">About</div></a>
+				  <a href="portfolio.html"><div class="nav-button">Portfolio</div></a>
+				  <a href="contact.html"><div class="nav-button">Contact</div></a>
 			  </nav>
   	  </div>
   	</header>
@@ -49,9 +47,11 @@
 			<aside>
 		 		<h2>Connect With Me</h2>
 		 		<hr>
-		 		<img src="assets/images/stack-overflow.png">
-				<img src="assets/images/linkedin.png">
-				<a href="https://github.com/Richwb"><img src="assets/images/github.png"></a>
+		 		<div class="connect-imgs">
+		 			<img src="assets/images/stack-overflow.png">
+					<img src="assets/images/linkedin.png">
+					<a href="https://github.com/Richwb"><img src="assets/images/github.png"></a>
+				</div>
 			</aside>
 		</main>
 		
