--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 				<hr>
 		
-				<img src="assets/images/bio-pic.jpg" alt="Me driving a dune buggy in Cancun">
+				<img id="profile-pic" src="assets/images/bio-pic.jpg" alt="Me driving a dune buggy in Cozumel">
 
 				<!--section about my coding history-->
 				<section>
@@ -47,11 +47,9 @@
 			<aside>
 		 		<h2>Connect With Me</h2>
 		 		<hr>
-		 		<div class="connect-imgs">
 		 			<img src="assets/images/stack-overflow.png">
 					<img src="assets/images/linkedin.png">
 					<a href="https://github.com/Richwb"><img src="assets/images/github.png"></a>
-				</div>
 			</aside>
 		</main>
 		
