nav and aside styling

--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,11 @@
 		<div class="headerContent">
 			<div class="name">Richard Bates</div>
 		<!--menu-->
-			<nav>
-				<a href="index.html"><div class="nav-button">About</div></a>
-			  <a href="portfolio.html"><div class="nav-button">Portfolio</div></a>
-			  <a href="contact.html"><div class="nav-button">Contact</div></a>
-		  </nav>
+				<nav>
+					<a href="index.html">About</a>
+				  <a href="portfolio.html">Portfolio</a>
+				  <a href="contact.html">Contact</a>
+			  </nav>
 	  </div>
 	 </header>
 	  	<!--main content-->
@@ -50,7 +50,7 @@
 								</label>
 								<br >
 
-								<input type="submit" name="contact-submit" Value="Submit" size="10">
+								<input type="submit" name="contact-submit" Value="Submit">
 							</fieldset>
 						</form>
 					</section>
