--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		 		<h2>Connect With Me</h2>
 		 		<hr>
 		 			<a href="https://stackoverflow.com/users/8359487/rwbates"><img src="assets/images/stack-overflow.png"></a>
-					<a href="https://www.linkedin/com/in/richard-bates-383473b2"><img src="assets/images/linkedin.png">
+					<a href="https://www.linkedin.com/in/richard-bates-383473b2"><img src="assets/images/linkedin.png">
 					<a href="https://github.com/Richwb"><img src="assets/images/github.png"></a>
 			</aside>
 		</main>
