--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 	  	<article>
 			
 				<h1>Portfolio</h1>
-					
+				
 				<hr>
 					<section>
 						<figure>
@@ -52,11 +52,11 @@
 				</article>
 	
 			<!--site links in an aside-->
-			<aside>
+		<aside>
 		 		<h2>Connect With Me</h2>
 		 		<hr>
-		 			<img src="assets/images/stack-overflow.png">
-					<img src="assets/images/linkedin.png">
+		 			<a href="https://stackoverflow.com/users/8359487/rwbates"><img src="assets/images/stack-overflow.png"></a>
+					<a href="https://www.linkedin.com/in/richard-bates-383473b2"><img src="assets/images/linkedin.png">
 					<a href="https://github.com/Richwb"><img src="assets/images/github.png"></a>
 			</aside>
 		</main>
