--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Richard Bates' Bio</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<meta charset="utf-8">
 	</head>
 	<body>
   	<header>
@@ -49,9 +50,9 @@
 			<aside>
 		 		<h2>Connect With Me</h2>
 		 		<hr>
-		 			<a href="https://stackoverflow.com/users/8359487/rwbates"><img src="assets/images/stack-overflow.png"></a>
-					<a href="https://www.linkedin.com/in/richard-bates-383473b2"><img src="assets/images/linkedin.png">
-					<a href="https://github.com/Richwb"><img src="assets/images/github.png"></a>
+		 			<a href="https://stackoverflow.com/users/8359487/rwbates"><img src="assets/images/stack-overflow.png" alt="stack-overflow icon"></a>
+					<a href="https://www.linkedin.com/in/richard-bates-383473b2"><img src="assets/images/linkedin.png" alt="Linked incon"></a>
+					<a href="https://github.com/Richwb"><img src="assets/images/github.png" alt="gitgub icon"></a>
 			</aside>
 		</main>
 		
